--- a/Sales_Forecasting/contact_us.html
+++ b/Sales_Forecasting/contact_us.html
@@ -3,6 +3,7 @@
 <html>
 
 <head>
+    <link rel="shortcut icon" type="image/png" href="Resources/favicon.png" />
     <title>Sales Forcasting - Contact Us</title>
     <link rel="stylesheet" href="styles/contact_usUI_Style.css" />
     <meta charset="UTF-8" />
