--- a/Sales_Forecasting/developers.html
+++ b/Sales_Forecasting/developers.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+    <link rel="shortcut icon" type="image/png" href="Resources/favicon.png" />
+
     <link rel="stylesheet" href="styles/developers_Style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
