--- a/Sales_Forecasting/help.html
+++ b/Sales_Forecasting/help.html
@@ -1,6 +1,8 @@
 <html>
 
 <head>
+    <link rel="shortcut icon" type="image/png" href="Resources/favicon.png" />
+
     <!--Linking CSS code in styles folder which is one folder back and located in the styles folder-->
     <link rel="stylesheet" href="styles/helpUI_Style.css" />
     <title>Help</title>
