--- a/Sales_Forecasting/index.html
+++ b/Sales_Forecasting/index.html
@@ -4,6 +4,8 @@
 <html lang="en">
 
 <head>
+    <link rel="shortcut icon" type="image/png" href="Resources/favicon.png" />
+
     <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-app.js"></script>
 
     <!-- If you enabled Analytics in your project, add the Firebase SDK for Analytics -->
