--- a/Sales_Forecasting/membership.html
+++ b/Sales_Forecasting/membership.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+    <link rel="shortcut icon" type="image/png" href="Resources/favicon.png" />
+
     <link rel="stylesheet" href="styles/membership.css" />
     <title>Jaxify Software - Shop</title>
 </head>
