--- a/Sales_Forecasting/sign_in.html
+++ b/Sales_Forecasting/sign_in.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+    <link rel="shortcut icon" type="image/png" href="Resources/favicon.png" />
+
     <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
 
     <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
