--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+    <link rel="shortcut icon" type="image/png" href="Resources/favicon.png" />
+
     <meta name="description" content="Get Your Software Idea Coded - Order Affordable Custom Coded Website, Desktop And Mobile Applications" />
     <meta name="robots" content="Custom Software, Code Custom Software, Order Custom Website, Order Custom Software, Hire A Developer" />
     <meta name="googlebot" content="Custom Software, Code Custom Software, Order Custom Website, Order Custom Software, Hire A Developer" />
