--- a/Sales_Forecasting/developers.html
+++ b/Sales_Forecasting/developers.html
@@ -38,7 +38,24 @@
     <section>
       <hr />
       <h2>Quality Control</h2>
+      <div
+        class="LI-profile-badge"
+        data-version="v1"
+        data-size="medium"
+        data-locale="en_US"
+        data-type="vertical"
+        data-theme="dark"
+        data-vanity="ruben-du-pisanie-591b4b1a9"
+      >
+        <a
+          class="LI-simple-link"
+          href="https://za.linkedin.com/in/ruben-du-pisanie-591b4b1a9?trk=profile-badge"
+          >Ruben du Pisanie</a
+        >
+      </div>
+      <br />
     </section>
+    <br />
   </body>
   <script
     type="text/javascript"
