--- a/Sales_Forecasting/developers.html
+++ b/Sales_Forecasting/developers.html
@@ -28,6 +28,8 @@
     <section>
       <hr />
       <h2>Backend Developers</h2>
+      <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="freislich-van-der-westhuizen-9352a81a7"><a class="LI-simple-link" href='https://za.linkedin.com/in/freislich-van-der-westhuizen-9352a81a7?trk=profile-badge'>Freislich van der Westhuizen</a></div>
+
     </section>
 
     <section>
