--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#about">About Us</a></li>
-                <li><a href="#offer">What We Offer</a></li>
+                <li><a href="#offer-1">What We Offer</a></li>
                 <li><a href="#slideshow">Example Software</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <!-- <li>
@@ -32,120 +32,193 @@
         </nav>
     </header>
     <section>
-        <section id="main">
+        <div id="main">
 
             <h1 class="title">Jaxify Software</h1>
             <h2>Order Custom Affordable Websites & Software For Your Convienience</h2>
-            <img src="/images/back.webp" alt="" class="mainbackground">
-        </section>
+            <img src="/Sales_Forecasting/Resources/favicon.png">
+
+        </div>
         <section id="about">
-            <h1 style="margin-bottom: 2%;">About Us</h1>
+            <h1 style="margin-bottom: 2%;">Who Are We?</h1>
             <section class="border">
                 <br />
                 <p>
-                    Jaxify Software Is A Company That Makes Professional Looking Customisable Software & Websites For Affordable Prices.
+                    Jaxify Software is an innovative company consisting of highly skilled freelance Developers looking to make your life easier.
+                </p>
+                <p>
+                    Everyone has some kind of software idea on the mind that they wish to bring to life, whether it’s the next exercise application or a website for an event, wedding, or gift to someone. You might even want to get a program created for your computer to make
+                    your life easier or save you time and money, but not everyone knows how to do that. That’s why we’ve created Jaxify Software!
+                </p>
+                <p>
+                    Our company consists of Highly Skilled Freelance Developers Looking To Work For You!
                 </p>
 
-                <p>
-                    We Have Been Active For More Than A Year Providing Different Kinds Of Service In The IT Department.
-                </p>
-                <p>
-                    Based In Pretoria, South Africa, We Work Hard To Provide Nation Wide Service.
-                </p>
-                <p>
-                    Jaxify Software Is Special Because We Care More About Our Clients Than We Care About Anything Else!
-                </p>
-                <p>
-                    Our Core Values Are That We Work Hard, Deliver Fast And We Ensure High Quality! We Keep Working Untill You Are Happy!
-                </p>
-                <p>
-                    Why Us And Not A Website Builder Or Other Competitors? We Are Less Expensive And Your Designs Can Be More Flexsable And Professional, We Don't Have Watermarks.
-                </p>
                 <br />
             </section>
             <section>
                 <section id="offer">
-                    <h1>What We Offer</h1>
+                    <h1>Why Chose Us?</h1>
                     <section class="borderOffer">
                         <br>
-                        <p>Manual Web Development</p>
-                        <br />
-                        <p>Desktop Software Development</p>
-                        <br />
-                        <p>Mobile Application Development</p>
-                        <br>
-                        <p>Automation Script Development To Save You Time & Money</p>
-                        <br>
-                        <p>Modern User Interface Designs To Suit Your Needs</p>
-                        <br />
+                        <p>We are Affordable! Many highly skilled developers out there are passionate to create your next product, purely because they enjoy what they do! We take on small projects ranging from R150 all the way up to highly professional software.
+                        </p>
 
-                        <p>Affordable Prices For Every Type Of Software</p>
-                        <br />
-
-                        <p>Different Themes Based On Your Preference</p>
                         <br />
 
                     </section>
                 </section>
-                <section id="developer">
+                <section>
+                    <section id="offer">
+                        <h1>You Name Your Price</h1>
+                        <section class="borderOffer">
+                            <br>
+                            <p>No one likes spending money, that's why you give us your idea, with a suggested price and we’ll communicate with you from there on! Many times developers are looking to improve their skills and tend to be happy with your suggested
+                                price.
+                            </p>
 
-                </section>
-            </section>
-        </section>
-        <section id="slideshow">
-            <h1>What We've Created</h1>
-            <br>
-            <br>
+                            <br />
 
-            <!-- Slideshow container -->
-            <div class="slideshow-container">
+                        </section>
+                    </section>
 
-                <!-- Full-width images with number and caption text -->
-                <div class="mySlides fade">
-                    <div class="numbertext">1 / 3</div>
-                    <img src="slide_02.webp" style="width:100%">
-                    <div class="text">Sales Forecasting Website</div>
-                </div>
+                    <section>
+                        <section id="offer">
+                            <h1>We Are Fast</h1>
+                            <section class="borderOffer">
+                                <br>
+                                <p>Waiting for something to be created for you can be frustrating, to say the least. Jaxify Software has freelance developers who are passionate about creating your software with really high quality and tend to work on your
+                                    project with the intention of getting it done ASAP for your convenience! Depending on the size of the project, deliveries can range from 1 day to a week to 1+ Months for very large projects.
+                                </p>
 
-                <div class="mySlides fade">
-                    <div class="numbertext">2 / 3</div>
-                    <img src="slide_01.webp" style="width:100%;">
-                    <div class="text">Wedding Website</div>
-                </div>
+                                <br />
 
-                <div class="mySlides fade">
-                    <div class="numbertext">3 / 3</div>
-                    <img src="slide_03.webp" style="width:100%">
-                    <div class="text">Desktop Electronic Voting Software</div>
-                </div>
+                            </section>
+                        </section>
+                        <section>
+                            <section id="offer">
+                                <h1>Modern User Interfaces</h1>
+                                <section class="borderOffer">
+                                    <br>
+                                    <p>We design our software with the most modern technologies in order to create you beautiful, polished and professional-looking software based on your suggested theme.
+                                    </p>
 
-                <!-- Next and previous buttons -->
-                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                <a class="next" onclick="plusSlides(1)">&#10095;</a>
-            </div>
-            <br>
+                                    <br />
 
-            <!-- The dots/circles -->
-            <div style="text-align:center">
-                <span class="dot" onclick="currentSlide(1)"></span>
-                <span class="dot" onclick="currentSlide(2)"></span>
-                <span class="dot" onclick="currentSlide(3)"></span>
-            </div>
-            <section id="contact" style="margin-top: 3%;">
-                <h1>Are You Interested?<br>Contact Us!</h1>
-                <br>
+                                </section>
+                            </section>
 
-                <h2 style="color: red;">Email Address - jacovanstryp@gmail.com<br></h2>
+                            <section>
+                                <section id="offer">
+                                    <h1>We’re Only Happy When You Are</h1>
+                                    <section class="borderOffer">
+                                        <br>
+                                        <p>If you don't like the way we did something, tell us! We want to keep working until you are 100% satisfied with the outcome of your requested software!
+                                        </p>
 
-                <a href="https://m.me/jaxifysoftware" style="text-decoration: none">
-                    <h2 style="color: green;">Chat On Messanger<br></h2>
-                </a>
+                                        <br />
 
-                <a href="https://www.linkedin.com/in/danielvanstryp/" style="text-decoration: none">
-                    <h2 style=" color: cornflowerblue; ">Developer LinkedIn Page<br></h2>
-                </a>
-                <footer>Copyright © Jaxify Software 2020 - Daniël (Jaco) Van Stryp</footer>
-            </section>
+                                    </section>
+                                </section>
+
+                                <section>
+                                    <section id="offer">
+                                        <h1>No Watermarks</h1>
+                                        <section class="borderOffer">
+                                            <br>
+                                            <p>Unlike website builders, we manually code all our work and ensure it is optimized for your situation while looking professional and being of a high standard. We don't leave any of those nasty watermarks, we
+                                                will assist you in any steps after the creation of your software should you wish to have it hosted and have a custom domain address.
+                                            </p>
+
+                                            <br />
+
+                                        </section>
+                                    </section>
+
+
+                                    <section>
+                                        <section id="offer-1">
+                                            <h1>What We Offer</h1>
+                                            <section class="borderOffer">
+                                                <br>
+                                                <p>Manual Web Development</p>
+                                                <br />
+                                                <p>Desktop Software Development</p>
+                                                <br />
+                                                <p>Mobile Application Development</p>
+                                                <br>
+                                                <p>Automation Script Development To Save You Time & Money</p>
+                                                <br>
+                                                <p>Modern User Interface Designs To Suit Your Needs</p>
+                                                <br />
+
+                                                <p>Affordable Prices For Every Type Of Software</p>
+                                                <br />
+
+                                                <p>Different Themes Based On Your Preference</p>
+                                                <br />
+
+                                            </section>
+                                        </section>
+                                        <section id="developer">
+
+                                        </section>
+                                    </section>
+                                </section>
+                                <section id="slideshow">
+                                    <h1>What We've Created</h1>
+                                    <br>
+                                    <br>
+
+                                    <!-- Slideshow container -->
+                                    <div class="slideshow-container">
+
+                                        <!-- Full-width images with number and caption text -->
+                                        <div class="mySlides fade">
+                                            <div class="numbertext">1 / 3</div>
+                                            <img src="slide_02.webp" style="width:100%">
+                                            <div class="text">Sales Forecasting Website</div>
+                                        </div>
+
+                                        <div class="mySlides fade">
+                                            <div class="numbertext">2 / 3</div>
+                                            <img src="slide_01.webp" style="width:100%;">
+                                            <div class="text">Wedding Website</div>
+                                        </div>
+
+                                        <div class="mySlides fade">
+                                            <div class="numbertext">3 / 3</div>
+                                            <img src="slide_03.webp" style="width:100%">
+                                            <div class="text">Desktop Electronic Voting Software</div>
+                                        </div>
+
+                                        <!-- Next and previous buttons -->
+                                        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                                        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                                    </div>
+                                    <br>
+
+                                    <!-- The dots/circles -->
+                                    <div style="text-align:center">
+                                        <span class="dot" onclick="currentSlide(1)"></span>
+                                        <span class="dot" onclick="currentSlide(2)"></span>
+                                        <span class="dot" onclick="currentSlide(3)"></span>
+                                    </div>
+                                    <section id="contact" style="margin-top: 3%;">
+                                        <h1>Are You Interested?<br>Contact Us!</h1>
+                                        <br>
+
+                                        <h2 style="color: red;">Email Address - jacovanstryp@gmail.com<br></h2>
+
+                                        <a href="https://m.me/jaxifysoftware" style="text-decoration: none">
+                                            <h2 style="color: green;">Chat On Messanger<br></h2>
+                                        </a>
+
+                                        <a href="https://www.linkedin.com/in/danielvanstryp/" style="text-decoration: none">
+                                            <h2 style=" color: cornflowerblue; ">Developer LinkedIn Page<br></h2>
+                                        </a>
+                                        <footer>Copyright © Jaxify Software 2020 - Daniël (Jaco) Van Stryp</footer>
+                                    </section>
 </body>
 <script src="main.js "></script>
 
