Beta Payment Launch

--- a/Sales_Forecasting/membership.html
+++ b/Sales_Forecasting/membership.html
@@ -22,7 +22,12 @@
 </head>
 
 <body>
-    <script src="https://www.paypal.com/sdk/js?client-id=AW7qyLhvr--oVLK_GuWzPTH0Ix46U8wRPsIv6U2DIYSPed-fkjko8V9wvi6MstJpFHDYXAAKRaiKXc49"></script>
+    <div id="overlay"></div>
+    <div id="loading">Loading</div>
+
+    <div id="loader"></div>
+
+    <script src="https://www.paypal.com/sdk/js?client-id=ASv4V8zGf5ZeNTdr472NePQDCgE9ZLWgib0EaVJKT7HX6yuXlMBfL76kM0-qjgzoiqmSgPo2Ym1Y1oIF"></script>
     <script src="js/payments.js"></script>
 
     <img id="index_introduction_logo" src="Resources/Logo.webp" />
