--- a/Sales_Forecasting/sign_in.html
+++ b/Sales_Forecasting/sign_in.html
@@ -23,6 +23,10 @@
 </head>
 
 <body>
+    <div id="overlay"></div>
+    <div id="loading">Loading</div>
+
+    <div id="loader"></div>
     <section id="index_introduction_top">
         <img id="index_introduction_logo" src="Resources/Logo.webp" />
         <ul id="index_introduction_menu">
