Payment Page Updates

--- a/Sales_Forecasting/membership.html
+++ b/Sales_Forecasting/membership.html
@@ -58,12 +58,12 @@
 
     <div class="contaner my-container text-white text-center col-{breakpoint}-auto  ml-5 mr-5 shopping_part">
         <div class="row">
-            <div class="col-md cus-border ml-3 mb-5">
+            <div class="col-md cus-border ml-3 mb-5" id="autobackfill1">
 
-                <h1 id="BasicPlan" class="mt-2">Basic<br />$5 USD</h1>
+                <h1 id=" BasicPlan" class="mt-2 ">Basic<br />$5 USD</h1>
 
                 <p>Gives you the following:</p>
-                <ul class="list-unstyled">
+                <ul class="list-unstyled ">
                     <li>Up to 100 free searches.</li>
                     <li>Store up to 150 search results in your profile.</li>
                     <li>Something else that involves something else</li>
@@ -76,11 +76,11 @@
 
                 <br />
             </div>
-            <div class="col-md cus-border ml-3 mb-5">
-                <h1 id="PremiumcPlan" class="mt-2">Premium<br />$15 USD</h1>
+            <div class="col-md cus-border ml-3 mb-5 " id="autobackfill2">
+                <h1 id=" PremiumcPlan " class="mt-2 ">Premium<br />$15 USD</h1>
 
                 <p>Gives you the following:</p>
-                <ul class="list-unstyled">
+                <ul class="list-unstyled ">
                     <li>Up to 500 searches per month.</li>
                     <li>Store up to 1000 search results in your profile.</li>
                     <li>On hand assistance with problems and queries.</li>
@@ -91,11 +91,11 @@
                 <br />
                 <div id="paypal-premium-button"></div>
                 <br /></div>
-            <div class="col-md cus-border ml-3 mb-5">
-                <section id="VIP">
-                    <h1 id="FullAcess" class="mt-2">Full Access<br />$25 USD</h1>
+            <div class="col-md cus-border ml-3 mb-5 " id="autobackfill3">
+                <section id="VIP ">
+                    <h1 id="FullAcess " class="mt-2 ">Full Access<br />$25 USD</h1>
                     <p>Gives you the following:</p>
-                    <ul class="list-unstyled">
+                    <ul class="list-unstyled ">
                         <li>Unlimited searches per month.</li>
                         <li>Unlimited storage for your search results.</li>
                         <li>On hand assistance with problems and queries.</li>
@@ -114,9 +114,9 @@
 
     <!--End Bootstrap Method Of Implemetation-->
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js " integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj " crossorigin="anonymous "></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js " integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo " crossorigin="anonymous "></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js " integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI " crossorigin="anonymous "></script>
 </body>
 
 </html>
