--- a/Sales_Forecasting/sign_in.html
+++ b/Sales_Forecasting/sign_in.html
@@ -18,57 +18,91 @@
 
     <title>Sales Forcasting - Sign In</title>
     <link rel="stylesheet" href="styles/sign_inUI_Style.css" />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 </head>
 
 <body>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
+
+
     <div id="overlay"></div>
     <div id="loading">Loading</div>
 
     <div id="loader"></div>
-    <section id="index_introduction_top">
-        <img id="index_introduction_logo" src="Resources/Logo.webp" />
-        <ul id="index_introduction_menu">
-            <a href="index.html">
-                <li id="main_menu">Home</li>
-            </a>
-        </ul>
-    </section>
 
-    <label id="signin_main_lable">
-      Good Day!<br /><br />Please Enter Your Credentials
-    </label>
-    <section id="info_list">
-        <ul>
-            <section id="info_list_item">
-                <input id="client_info" type="text" placeholder="E-Mail Address" />
-            </section>
+    <div class="container-fluid my-container text-white">
+        <div class="row my-row">
+            <div class="col-5 my-col">
+                <img class="w-100" src="Resources/Logo.webp" />
+            </div>
+            <div class="col home-btn my-col text-right">
+                <a href="index.html" class="text-white">
+                    <li>Home</li>
+                </a>
+            </div>
+        </div>
+        <div class="row my-row">
+            <div class="col fronttext my-col mt-4">
+                <h1>Good Day!</h1>
+            </div>
+        </div>
 
-            <section id="info_list_item">
-                <input id="password_info" type="password" placeholder="Password" />
-            </section>
-        </ul>
-    </section>
+        <div class="row my-row fronttext">
+            <div class="col">
+                <h2 id="signin_main_lable">Please Enter Your Credentials</h2>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid my-container text-white text-center">
+        <div class="row my-row">
+            <div class="col">
+                <section id="info_list">
+                    <section id="info_list_item">
+                        <input id="client_info" type="text" placeholder="E-Mail Address" />
+                    </section>
+            </div>
 
-    <section id="signin_button_reg">
-        <ul id="btns_r">
-            <a href="#">
-                <li id="reg_btn">
-                    Register
-                </li>
-            </a>
-        </ul>
-    </section>
-    <section id="signin_button_signin">
-        <ul id="btns_s">
-            <a href="#">
-                <li id="signin_btn">
-                    Sign In
-                </li>
-            </a>
-        </ul>
-    </section>
+        </div>
+        <div class="row my-row">
+            <div class="col mb-auto">
+                <section id="info_list_item">
+                    <input id="password_info" type="password" placeholder="Password" />
+                </section>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid my-container text-white text-center mt-5">
+        <div class="row my-row fronttext">
+            <div class="col-md-6 my-col justify-content-center">
+                <section id="signin_button_signin">
+                    <ul id="btns_s" class="list-unstyled ">
+                        <a href="#" class="nounderline">
+                            <li id="signin_btn">
+                                Sign In
+                            </li>
+                        </a>
+                    </ul>
+                </section>
+            </div>
+            <div class="col-md-6 my-col">
+                <section id="signin_button_reg ">
+                    <ul id="btns_r" class="list-unstyled">
+                        <a href="#" class="nounderline">
+                            <li id="reg_btn">
+                                Register
+                            </li>
+                        </a>
+                    </ul>
+                </section>
+
+            </div>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js " integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj " crossorigin="anonymous "></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js " integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo " crossorigin="anonymous "></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js " integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI " crossorigin="anonymous "></script>
 </body>
 
 <script src="js/sign_in.js"></script>
