--- a/Sales_Forecasting/sign_in.html
+++ b/Sales_Forecasting/sign_in.html
@@ -34,7 +34,7 @@
     <div class="container-fluid my-container text-white">
         <div class="row my-row">
             <div class="col-5 my-col">
-                <img class="w-100" src="Resources/Logo.webp" />
+                <img class="w-100 h-100" src="Resources/Logo.webp" />
             </div>
             <div class="col home-btn my-col text-right">
                 <a href="index.html" class="text-white">
