--- a/Sales_Forecasting/help.html
+++ b/Sales_Forecasting/help.html
@@ -12,8 +12,11 @@
     <p style="color: red; text-align: center;">
         [2 May 2020] PLEASE NOTE - THIS WEBSITE IS CURRENTLY UNDER DEVELOPMENT BY A TEAM OF 5 STUDENTS AT BELGIUM CAMPUS ITVERSITY, NOTHING IS FINAL AND THERE WILL BE WIP ALL OVER THE WEBSITE
     </p>
-    <h1>Example (How to Search)</h1>
-    <p>Discription of how the client will use the search feature</p>
+    <h1> How to Search :</h1>
+    <p>Step 1: Make sure you are signed in to your account at the sign in page: <a href=>click here to sign in</a></p><br>
+    <p>Step 2: Go to our home page: <a href= > click here for home page</a>, there you will find a search space with an example of what you can search</p> <br>
+    <p>Step 3: Insert the item or keyword you are looking for in this search box</p><br>
+    <p>Step 4: Press the search button and your result will be displayed. If your results are not displayed, please contact us through our information on our help page : <a href= >click here to report problems</a></p><br>
     <h1>Example (How to Buy)</h1>
     <p>Discription of how the client will Buy</p>
     <h1>Example (What to do if you forget your password)</h1>
