--- a/Sales_Forecasting/help.html
+++ b/Sales_Forecasting/help.html
@@ -12,17 +12,22 @@
     <p style="color: red; text-align: center;">
         [2 May 2020] PLEASE NOTE - THIS WEBSITE IS CURRENTLY UNDER DEVELOPMENT BY A TEAM OF 5 STUDENTS AT BELGIUM CAMPUS ITVERSITY, NOTHING IS FINAL AND THERE WILL BE WIP ALL OVER THE WEBSITE
     </p>
-    <h1> How to Search :</h1>
-    <p>Step 1: Make sure you are signed in to your account at the sign in page: <a href="sign_in.html">click here to sign in</a></p><br>
-    <p>Step 2: Go to our home page: <a href= "index.html" > click here for home page</a>, there you will find a search space with an example of what you can search</p> <br>
-    <p>Step 3: Insert the item or keyword you are looking for in this search box</p><br>
-    <p>Step 4: Press the search button and your result will be displayed. If your results are not displayed, please contact us through our information on our help page : <a href= "contact_us.html">click here to report problems</a></p><br>
-    <h1>Example (How to Buy)</h1>
-    <p>Discription of how the client will Buy</p>
-    <h1>Example (What to do if you forget your password)</h1>
-    <p>Discription of how the client will Buy</p>
-    <h1>Example (Any other features you might have a problem with)</h1>
-    <p>Discription of how the client will Buy</p>
+    <h1> 
+    <h1>The following are common problems that occur:</h1>
+    
+    <h2> How to contact us: </h2>
+    <p>Step 1: Go to the contact us page: <a href="contact_us.html> click here to go into the contact us page</a><br>
+       Step 2: Choose a medium of contacting us that best suits you, and we will get back to you as swiftly as possible. 
+
+    <h2>How to Search :</h2>
+    <p>Step 1: Make sure you are signed in to your account at the sign in page: <a href="sign_in.html">click here to sign in</a><br>
+    Step 2: Go to our home page: <a href= "index.html" > click here for home page</a>, there you will find a search space with an example of what you can search<br>
+    Step 3: Insert the item or keyword you are looking for in this search box<br>
+    Step 4: Press the search button and your result will be displayed. If your results are not displayed, please contact us through our information on our help page : <a href= "contact_us.html">click here to report problems</a></p><br>
+    
+    <h2>What to do if you forget your password: </h2>
+    <p>Step 1: Go to the forgot password page: <a href="forget_password.html"> click here to go into the forgot password page</a><br>
+    Step 2: Follow the steps that are displayed. If this does not work, please feel free to contact us: <a href="contact_us.html" > click here to contact us</a></p><br>
 </body>
 
 </html>
