--- a/Sales_Forecasting/help.html
+++ b/Sales_Forecasting/help.html
@@ -17,7 +17,7 @@
     
     <h2> How to contact us: </h2>
     <p>Step 1: Go to the contact us page: <a href="contact_us.html> click here to go into the contact us page</a><br>
-       Step 2: Choose a medium of contacting us that best suits you, and we will get back to you as swiftly as possible. 
+       Step 2: Choose a medium of contacting us that best suits you, and we will get back to you as swiftly as possible.</p><br>
 
     <h2>How to Search :</h2>
     <p>Step 1: Make sure you are signed in to your account at the sign in page: <a href="sign_in.html">click here to sign in</a><br>
@@ -28,6 +28,12 @@
     <h2>What to do if you forget your password: </h2>
     <p>Step 1: Go to the forgot password page: <a href="forget_password.html"> click here to go into the forgot password page</a><br>
     Step 2: Follow the steps that are displayed. If this does not work, please feel free to contact us: <a href="contact_us.html" > click here to contact us</a></p><br>
+
+    <h2>How to view and edit your account information: </h2>
+    <p> Step 1: Make sure that you are signed in by going to the sign in page: <a href="sign_in.hml" click here to sign in to your account<\a><br>
+    Step 2: Go to the account page: <a href="my_account.html"> click here to go into the account page</a><br> in order to view or change your account details. 
+    Step 3: If this does not work, please feel free to contact us: <a href="contact_us.html" > click here to contact us</a></p><br>
+
 </body>
 
 </html>
