Improved Profile - Alpha 01

--- a/Sales_Forecasting/index.html
+++ b/Sales_Forecasting/index.html
@@ -70,7 +70,7 @@
         <!--Buttons for further navigation-->
         <section id="index_buttons">
             <ul>
-                <a href="#">
+                <a href="my_account.html">
                     <li id="index_btn">
                         Profile
                     </li>
