--- a/Sales_Forecasting/my_account.html
+++ b/Sales_Forecasting/my_account.html
@@ -136,7 +136,7 @@
             *   Mention those ID Names Next to the values below to make life easier
             *   For Example:
                      *   Personal Details [CONTAINER]
-                           *   Name [Editable Input Box] - [ROW COL-MD-3 NAME COL-MD-9] - ID user_first_name
+                           *   Name [Editable Input Box] - [ROW COL-MD-3 NAME COL-MD-9 Input Box Showing Name Data] - ID user_first_name
             *   A colomn can be 12 "blocks" long, you need to set it to Medium (col-md-(value totaling 12)
         https://getbootstrap.com/docs/4.5/layout/grid/
         Note - RO Means Read Only
