--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </section>
             <section>
                 <section id="offer">
-                    <h1>Why Chose Us?</h1>
+                    <h1>Why Choose Us?</h1>
                     <section class="borderOffer">
                         <br>
                         <p>We are Affordable! Many highly skilled developers out there are passionate to create your next product, purely because they enjoy what they do! We take on small projects ranging from R150 all the way up to highly professional software.
