--- a/Sales_Forecasting/membership.html
+++ b/Sales_Forecasting/membership.html
@@ -84,7 +84,7 @@
                     <li>Up to 500 searches per month.</li>
                     <li>Store up to 1000 search results in your profile.</li>
                     <li>On hand assistance with problems and queries.</li>
-                    <li>Free of advertisments.</li>
+                    <li>Free of advertisements.</li>
                     <li>Something else that involves something else again</li>
                 </ul>
 
@@ -99,7 +99,7 @@
                         <li>Unlimited searches per month.</li>
                         <li>Unlimited storage for your search results.</li>
                         <li>On hand assistance with problems and queries.</li>
-                        <li>Free of advertisments.</li>
+                        <li>Free of advertisements.</li>
                         <li>Access to graphs and charts form your search results.</li>
                     </ul>
 
