--- a/Sales_Forecasting/search_results.html
+++ b/Sales_Forecasting/search_results.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <script data-ad-client="ca-pub-2887967406057408" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <link rel="shortcut icon" type="image/png" href="Resources/favicon.png" />
 
     <meta charset="UTF-8" />
