--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="styling/style.css" />
-    <title>Jaxify Software - Order Custom Affordable Software & Websites For Your Convienience</title>
+    <title>Jaxify Software - Order Custom Affordable Software</title>
 </head>
 
 <body>
