--- a/Sales_Forecasting/search_results.html
+++ b/Sales_Forecasting/search_results.html
@@ -2,21 +2,31 @@
 <html lang="en">
 
 <head>
-    <script data-ad-client="ca-pub-2887967406057408" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- Jaxify Software - Search Results -->
+    <ins class="adsbygoogle" style="display: block;" data-ad-client="ca-pub-2887967406057408" data-ad-slot="9216626532" data-ad-format="auto" data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
     <link rel="shortcut icon" type="image/png" href="Resources/favicon.png" />
-
+    <link rel="stylesheet" href="styles/search_resultsUI_Style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Search Results- Jaxify Software</title>
+    <title>Search Results - Jaxify Software</title>
 </head>
 
 <body>
+    <div id="overlay"></div>
+
+    <div id="loader"></div>
+
     <section>
         <h1 id="results_query">Loading...</h1>
     </section>
-    <section></section>
 </body>
 <!--Linking JS Code in JS Folder-->
 <script type="text/javascript " src="js/searchResults.js "></script>
 
 </html>
+
+<!--https://www.entrepreneur.com/article/77674-->
