--- a/Sales_Forecasting/my_account.html
+++ b/Sales_Forecasting/my_account.html
@@ -106,13 +106,29 @@
                     </div>
                 </div>
             </div>
-            <!--TODO: @Freislich Continue From here on, Instructions Below 
+            <!--TODO: 
                 FOCUS ON ROWS FOR EACH ENTRY AND COLUMNS FOR EACH "ITEM" IN THAT ROW-->
             <div class="container-fluid text-white">
-                <!--Personal Details-->
+                <div class="row mt-2">
+                    <div class="col-md-2 align-self-center my-col fronttext">
+                        Name
+                    </div>
+                    <div class="col-md-10 align-self-center my-col">
+                        <input class="data_value " id="user_name" type="text" placeholder="Name" readonly />
+                    </div>
+                </div>
+                <div class="row mt-2">
+                    <div class="col-md-2 align-self-center my-col fronttext">
+                       Surname
+                    </div>
+                    <div class="col-md-10 align-self-center my-col">
+                        <input class="data_value" id="user_surname" type="text" placeholder="Surname" readonly />
+                    </div>
+                </div>
             </div>
 
             <div class="container-fluid text-white">
+               
                 <!--Activity Details-->
             </div>
 
