Developer Page Redesign

--- a/Sales_Forecasting/developers.html
+++ b/Sales_Forecasting/developers.html
@@ -1,68 +1,165 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <link rel="shortcut icon" type="image/png" href="Resources/favicon.png" />
 
+    <title>Sales Forecasting - Developers</title>
     <link rel="stylesheet" href="styles/developers_Style.css" />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Developers - Sales Forecasting</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 </head>
 
 <body>
-    <img src="Resources/Logo.webp" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
 
-    <h1>
-        We Are Proud To Present Our Developers<br />Sales Forecasting By Jaxify Software
-    </h1>
-    <section id="project_leader">
-        <hr />
-        <h2>Project Manager & Lead Developer</h2>
-        <div class="LI-profile-badge" data-version="v1" data-size="large" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="danielvanstryp">
-            <a class="LI-simple-link" href="https://za.linkedin.com/in/danielvanstryp?trk=profile-badge">Daniël van Stryp</a
-        >
+    <div class="container-fluid my-container text-white">
+        <div class="row my-row top">
+            <div class="col-5 my-col">
+                <img class="w-100" src="Resources/Logo.webp" />
+            </div>
+            <div class="col home-btn my-col mr-5 mt-5">
+                <a href="index.html" class="text-white">
+                    <li>Home</li>
+                </a>
+            </div>
+        </div>
+        <div class="row my-row">
+            <div class="col fronttext my-col mt-4">
+                <h1>We Are Proud To Present Our Developers</h1>
+            </div>
+        </div>
+        <div class="row my-row fronttext">
+            <div class="col">
+                <h3>
+                    Sales Forecasting By Jaxify Software
+                </h3>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col fronttext">
+                <hr />
+                <h1>Backend Developers</h1>
+                <hr />
+                <br />
+            </div>
+        </div>
+        <div class="row">
+            <div class="col fronttext">
+                <h2>Project Manager & Full Stack Developer</h2>
+                <br />
+            </div>
+        </div>
+        <div class="row">
+            <div class="col fronttext">
+                <div class="LI-profile-badge" data-version="v1" data-size="large" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="danielvanstryp">
+                    <a class="LI-simple-link" href="https://za.linkedin.com/in/danielvanstryp?trk=profile-badge">Daniël van Stryp
+            </a>
+                </div>
+                <br />
+            </div>
+        </div>
+
+        <!---->
+        <div class="row">
+            <div class="col fronttext">
+                <h2>Database Developer</h2>
+                <br />
+            </div>
+        </div>
+        <div class="row">
+            <div class="col fronttext">
+                <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="freislich-van-der-westhuizen-9352a81a7">
+                    <a class="LI-simple-link" href="https://za.linkedin.com/in/freislich-van-der-westhuizen-9352a81a7?trk=profile-badge">Freislich van der Westhuizen</a
+            >
+          </div>
+
+          <br />
+        </div>
       </div>
-    </section>
 
-    <section>
-      <hr />
-      <h2>Backend Developers</h2>
-      <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="freislich-van-der-westhuizen-9352a81a7"><a class="LI-simple-link" href='https://za.linkedin.com/in/freislich-van-der-westhuizen-9352a81a7?trk=profile-badge'>Freislich van der Westhuizen</a></div>
-
-    </section>
-
-    <section>
-      <hr />
-      <h2>Frontend Developers</h2>
-    </section>
-
-    <section>
-      <hr />
-      <h2>Quality Control</h2>
-      <div
-        class="LI-profile-badge"
-        data-version="v1"
-        data-size="medium"
-        data-locale="en_US"
-        data-type="vertical"
-        data-theme="dark"
-        data-vanity="ruben-du-pisanie-591b4b1a9"
-      >
-        <a
-          class="LI-simple-link"
-          href="https://za.linkedin.com/in/ruben-du-pisanie-591b4b1a9?trk=profile-badge"
-          >Ruben du Pisanie</a
-        >
+      <!---->
+      <div class="row">
+        <div class="col fronttext">
+          <hr />
+          <h1>Frontend Developers</h1>
+          <hr />
+          <br />
+        </div>
       </div>
-      <br />
-    </section>
-    <br />
-  </body>
-  <script
-    type="text/javascript"
-    src="https://platform.linkedin.com/badges/js/profile.js"
-    async
-    defer
-  ></script>
+      <!---->
+      <div class="row">
+        <div class="col fronttext specialUnderline">
+          <h2>Quality Control</h2>
+          <br />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col fronttext">
+          <div
+            class="LI-profile-badge"
+            data-version="v1"
+            data-size="medium"
+            data-locale="en_US"
+            data-type="vertical"
+            data-theme="dark"
+            data-vanity="ruben-du-pisanie-591b4b1a9"
+          >
+            <a
+              class="LI-simple-link"
+              href="https://za.linkedin.com/in/ruben-du-pisanie-591b4b1a9?trk=profile-badge"
+              >Ruben du Pisanie</a
+            >
+          </div>
+
+          <br />
+        </div>
+      </div>
+
+      <!---->
+      <div class="row">
+        <div class="col fronttext specialUnderline">
+          <h2>Interface Design</h2>
+          <br />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col fronttext">
+          Tanya Du Plessis
+          <br />
+          <br />
+        </div>
+      </div>
+
+      <!---->
+      <!---->
+      <div class="row">
+        <div class="col">
+          <hr />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col fronttext">
+          <a href="#top" style="color: red !important;">[Return To Top]</a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col"></div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <br />
+                    <p class="text-white">
+                        If you have any enquiries about a team member or wish to contact them, click on View Profile to be redirected to their LinkedIn Account.
+                    </p>
+                    <br />
+                </div>
+            </div>
+            <!---->
+        </div>
+</body>
+<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+
 </html>
