--- a/Sales_Forecasting/sign_in.html
+++ b/Sales_Forecasting/sign_in.html
@@ -16,7 +16,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-firestore.js"></script>
 
-    <title>Sales Forcasting - Sign In</title>
+    <title>Sales Forecasting - Sign In</title>
     <link rel="stylesheet" href="styles/sign_inUI_Style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
