--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141187901-3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-141187901-3');
+</script>
+
     <link rel="shortcut icon" type="image/png" href="Sales_Forecasting/Resources/favicon.png" />
 
     <meta name="description" content="Get Your Software Idea Coded - Order Affordable Custom Coded Website, Desktop And Mobile Applications" />
